@@ -70,44 +70,27 @@
       <version>3.2.26</version>
       <scope>runtime</scope>
     </dependency>
-<!--    <dependency>-->
-<!--      <groupId>org.neo4j.driver</groupId>-->
-<!--      <artifactId>neo4j-java-driver</artifactId>-->
-<!--      <version>1.7.5</version>-->
-<!--    </dependency>-->
-<!--    <dependency>-->
-<!--      <groupId>org.slf4j</groupId>-->
-<!--      <artifactId>slf4j-simple</artifactId>-->
-<!--      <version>1.7.30</version>-->
-<!--    </dependency>-->
-    <!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
-<!--    <dependency>-->
-<!--      <groupId>ch.qos.logback</groupId>-->
-<!--      <artifactId>logback-classic</artifactId>-->
-<!--      <version>1.2.3</version>-->
-<!--      <scope>runtime</scope>-->
-<!--    </dependency>-->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>1.7.30</version>
     </dependency>
 <!--&lt;!&ndash;  Dependencies for caching data before and between runs  &ndash;&gt;-->
-    <dependency>
-      <groupId>com.hazelcast</groupId>
-      <artifactId>hazelcast</artifactId>
-      <version>3.12.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.hazelcast</groupId>
-      <artifactId>hazelcast-client</artifactId>
-      <version>3.12.5</version>
-    </dependency>
-    <dependency>
-      <groupId>com.hazelcast.jet</groupId>
-      <artifactId>hazelcast-jet</artifactId>
-      <version>3.2.1</version>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>com.hazelcast</groupId>-->
+<!--      <artifactId>hazelcast</artifactId>-->
+<!--      <version>3.12.5</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.hazelcast</groupId>-->
+<!--      <artifactId>hazelcast-client</artifactId>-->
+<!--      <version>3.12.5</version>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>com.hazelcast.jet</groupId>-->
+<!--      <artifactId>hazelcast-jet</artifactId>-->
+<!--      <version>3.2.1</version>-->
+<!--    </dependency>-->
 <!--  MASON and its dependencies-->
     <dependency>
       <groupId>edu.gmu.eclab</groupId>
@@ -218,36 +201,48 @@
         <configuration>
           <source>11</source>
           <target>11</target>
-          <maxmem>18.5g</maxmem>
+          <maxmem>8g</maxmem>
         </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.20.1</version>
+<!--          <configuration>-->
+<!--              <argLine>-Xmx16g -XX:MaxPermSize=2g</argLine>-->
+<!--          </configuration>-->
+      </plugin>
+      <plugin>
+        <artifactId>maven-jar-plugin</artifactId>
+        <version>3.2.0</version>
+          <configuration>
+            <archive>
+              <manifest>
+                <addClasspath>true</addClasspath>
+                <classpathPrefix>lib/</classpathPrefix>
+                <mainClass>edu.gmu.css.worldOrder.WorldOrder</mainClass>
+              </manifest>
+            </archive>
+          </configuration>
       </plugin>
 <!--      <plugin>-->
-<!--        <artifactId>maven-jar-plugin</artifactId>-->
-<!--        <version>3.0.2</version>-->
+<!--        <groupId>org.apache.maven.plugins</groupId>-->
+<!--        <artifactId>maven-dependency-plugin</artifactId>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <id>copy-dependencies</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>copy-dependencies</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <outputDirectory>target/lib</outputDirectory>-->
+<!--              <overWriteReleases>false</overWriteReleases>-->
+<!--              <overWriteSnapshots>false</overWriteSnapshots>-->
+<!--              <overWriteIfNewer>true</overWriteIfNewer>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--        </executions>-->
 <!--      </plugin>-->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>copy-dependencies</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy-dependencies</goal>
-            </goals>
-            <configuration>
-              <outputDirectory>${project.build.directory}/libs</outputDirectory>
-              <overWriteReleases>false</overWriteReleases>
-              <overWriteSnapshots>false</overWriteSnapshots>
-              <overWriteIfNewer>true</overWriteIfNewer>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
@@ -278,119 +273,118 @@
               <finalName>worldOrder</finalName>
               <shadedArtifactAttached>true</shadedArtifactAttached>
               <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-<!--              <shadedClassifierName>worldOrder</shadedClassifierName>-->
             </configuration>
           </execution>
-          <execution>
-            <id>worldOrderUI</id>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <filters>
-                <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/*.SF</exclude>
-                    <exclude>META-INF/*.DSA</exclude>
-                    <exclude>META-INF/*.RSA</exclude>
-                  </excludes>
-                </filter>
-              </filters>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>edu.gmu.css.worldOrder.WorldOrderWithUI</mainClass>
-                </transformer>
-              </transformers>
-<!--              <shadedClassifierName>worldOrderUI</shadedClassifierName>-->
-              <finalName>worldOrderUI</finalName>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-            </configuration>
-          </execution>
-          <execution>
-            <id>startHazelcastInstance</id>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <filters>
-                <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/*.SF</exclude>
-                    <exclude>META-INF/*.DSA</exclude>
-                    <exclude>META-INF/*.RSA</exclude>
-                  </excludes>
-                </filter>
-              </filters>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>edu.gmu.css.hazelcast.StartHazelcastInstance</mainClass>
-                </transformer>
-              </transformers>
-<!--              <shadedClassifierName>startHazelcastInstance</shadedClassifierName>-->
-              <finalName>startHazelcastInstance</finalName>
-            </configuration>
-          </execution>
-            <execution>
-            <id>loadSteppables</id>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <filters>
-                <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/*.SF</exclude>
-                    <exclude>META-INF/*.DSA</exclude>
-                    <exclude>META-INF/*.RSA</exclude>
-                  </excludes>
-                </filter>
-              </filters>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>edu.gmu.css.hazelcast.LoadSteppables</mainClass>
-                </transformer>
-              </transformers>
-              <finalName>loadSteppables</finalName>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-<!--              <shadedClassifierName>loadSteppables</shadedClassifierName>-->
-            </configuration>
-          </execution>
-          <execution>
-            <id>dataReporter</id>
-            <phase>package</phase>
-            <goals>
-              <goal>shade</goal>
-            </goals>
-            <configuration>
-              <filters>
-                <filter>
-                  <artifact>*:*</artifact>
-                  <excludes>
-                    <exclude>META-INF/*.SF</exclude>
-                    <exclude>META-INF/*.DSA</exclude>
-                    <exclude>META-INF/*.RSA</exclude>
-                  </excludes>
-                </filter>
-              </filters>
-              <transformers>
-                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                  <mainClass>edu.gmu.css.hazelcast.WorldDataReporter</mainClass>
-                </transformer>
-              </transformers>
-              <finalName>dataReporter</finalName>
-              <shadedArtifactAttached>true</shadedArtifactAttached>
-              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
-<!--              <shadedClassifierName>dataReporter</shadedClassifierName>-->
-            </configuration>
-          </execution>
+<!--          <execution>-->
+<!--            <id>worldOrderUI</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>shade</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <filters>-->
+<!--                <filter>-->
+<!--                  <artifact>*:*</artifact>-->
+<!--                  <excludes>-->
+<!--                    <exclude>META-INF/*.SF</exclude>-->
+<!--                    <exclude>META-INF/*.DSA</exclude>-->
+<!--                    <exclude>META-INF/*.RSA</exclude>-->
+<!--                  </excludes>-->
+<!--                </filter>-->
+<!--              </filters>-->
+<!--              <transformers>-->
+<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--                  <mainClass>edu.gmu.css.worldOrder.WorldOrderWithUI</mainClass>-->
+<!--                </transformer>-->
+<!--              </transformers>-->
+<!--&lt;!&ndash;              <shadedClassifierName>worldOrderUI</shadedClassifierName>&ndash;&gt;-->
+<!--              <finalName>worldOrderUI</finalName>-->
+<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
+<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          <execution>-->
+<!--            <id>startHazelcastInstance</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>shade</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <filters>-->
+<!--                <filter>-->
+<!--                  <artifact>*:*</artifact>-->
+<!--                  <excludes>-->
+<!--                    <exclude>META-INF/*.SF</exclude>-->
+<!--                    <exclude>META-INF/*.DSA</exclude>-->
+<!--                    <exclude>META-INF/*.RSA</exclude>-->
+<!--                  </excludes>-->
+<!--                </filter>-->
+<!--              </filters>-->
+<!--              <transformers>-->
+<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--                  <mainClass>edu.gmu.css.hazelcast.StartHazelcastInstance</mainClass>-->
+<!--                </transformer>-->
+<!--              </transformers>-->
+<!--&lt;!&ndash;              <shadedClassifierName>startHazelcastInstance</shadedClassifierName>&ndash;&gt;-->
+<!--              <finalName>startHazelcastInstance</finalName>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--            <execution>-->
+<!--            <id>loadSteppables</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>shade</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <filters>-->
+<!--                <filter>-->
+<!--                  <artifact>*:*</artifact>-->
+<!--                  <excludes>-->
+<!--                    <exclude>META-INF/*.SF</exclude>-->
+<!--                    <exclude>META-INF/*.DSA</exclude>-->
+<!--                    <exclude>META-INF/*.RSA</exclude>-->
+<!--                  </excludes>-->
+<!--                </filter>-->
+<!--              </filters>-->
+<!--              <transformers>-->
+<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--                  <mainClass>edu.gmu.css.hazelcast.LoadSteppables</mainClass>-->
+<!--                </transformer>-->
+<!--              </transformers>-->
+<!--              <finalName>loadSteppables</finalName>-->
+<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
+<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
+<!--&lt;!&ndash;              <shadedClassifierName>loadSteppables</shadedClassifierName>&ndash;&gt;-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          <execution>-->
+<!--            <id>dataReporter</id>-->
+<!--            <phase>package</phase>-->
+<!--            <goals>-->
+<!--              <goal>shade</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <filters>-->
+<!--                <filter>-->
+<!--                  <artifact>*:*</artifact>-->
+<!--                  <excludes>-->
+<!--                    <exclude>META-INF/*.SF</exclude>-->
+<!--                    <exclude>META-INF/*.DSA</exclude>-->
+<!--                    <exclude>META-INF/*.RSA</exclude>-->
+<!--                  </excludes>-->
+<!--                </filter>-->
+<!--              </filters>-->
+<!--              <transformers>-->
+<!--                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">-->
+<!--                  <mainClass>edu.gmu.css.hazelcast.WorldDataReporter</mainClass>-->
+<!--                </transformer>-->
+<!--              </transformers>-->
+<!--              <finalName>dataReporter</finalName>-->
+<!--              <shadedArtifactAttached>true</shadedArtifactAttached>-->
+<!--              <shadedClassifierName>jar-with-dependencies</shadedClassifierName>-->
+<!--&lt;!&ndash;              <shadedClassifierName>dataReporter</shadedClassifierName>&ndash;&gt;-->
+<!--            </configuration>-->
+<!--          </execution>-->
         </executions>
       </plugin>
     </plugins>
